[gd_scene load_steps=4 format=3 uid="uid://df2mvk2jhgps1"]

[ext_resource type="Script" path="res://Scenes/MainMenu/MainMenu.gd" id="1_ohaba"]
[ext_resource type="PackedScene" uid="uid://be148gqdt1eoa" path="res://Scenes/MainMenu/BG.tscn" id="2_m6t6i"]
[ext_resource type="PackedScene" uid="uid://iyssehxtq6ja" path="res://Scenes/SettingsMenu/SettingsMenu.tscn" id="3_ks2uu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ohaba")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = 1510.0
offset_top = 287.0
offset_right = 1896.0
offset_bottom = 371.0

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -13.0
offset_right = 37.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderLarge"
text = "Amalgam"

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -410.0
offset_top = -155.0
offset_right = -24.0
offset_bottom = 155.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="StartBtn" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Start"

[node name="TutorialBtn" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Tutorial"

[node name="SettingsBtn" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Settings"

[node name="QuitBtn" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="ReturnMenu" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Exit to Menu"

[node name="BG" parent="." instance=ExtResource("2_m6t6i")]

[node name="SettingsMenu" parent="." instance=ExtResource("3_ks2uu")]
layout_mode = 1

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/TutorialBtn" to="." method="_on_tutorial_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/ReturnMenu" to="." method="_on_return_menu_pressed"]
